style.css
*,
*::before,
*::after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    font: inherit;
}

*:focus-visible {
    outline: none;
}

html {
    color-scheme: dark light;
}

:root {
    font-family: Helvetica, sans-serif;
    --clr-dark: rgb(51, 88, 113);
    --clr-border: rgb(128, 165, 190);
}

body  {
    min-height: 100vh;
    scroll-behavior: smooth;
    color: var(--clr-dark);
}

.container {
    display: grid;
    place-content: center;
    min-height: 100vh;
}

.calculator {
    width: 300px;
    min-height: 500px;
    border: 1px solid var(--clr-border);
    border-radius: 5px;
    background-color: rgb(230, 243, 255);
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 2fr 4fr 1fr;
    gap: 5px;
    padding: 5px;
}

.display {
    grid-column: 1 / -1;
    border: 1px solid var(--clr-border);
    border-radius: 5px;
    background-color: rgb(246, 252, 255);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    font-size: 1.5rem;
    padding: 5px 12px;
    overflow: hidden;
    word-break: break-all;
    div {
        height: 30%;
        width: 100%;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 10px;
    }
}

.display__input span {
    height: 100%;
    display: none;
    overflow: hidden;
}


.keys__numbers-box {
    grid-column: 1 / -2;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 5px;
}

.keys__operators-box {
    display: grid;
    gap: 5px;
}

.button {
    color: var(--clr-dark);
    border: 1px solid var(--clr-border);
    border-radius: 5px;
    background-color: rgb(255, 253, 230);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    cursor: pointer;
    transition: .075s linear;
    &:hover {
        background-color: rgb(255, 250, 206);
    }
    &:active {
        background-color: white;
    }
    &:disabled {
        color: rgb(177, 190, 199);
        background-color: rgb(230, 243, 255);
        cursor: auto;
    }
}

.button_number {
    background-color: rgb(173, 221, 253);
    &:hover {
        background-color: rgb(230, 243, 255);
    }
    &:active {
        background-color: rgb(230, 243, 255);
    }
}

.button_zero {
    grid-column: 1 / 3;
}

.button_result {
    grid-column: 1 / 4;
}

